9/1: HW1 solutions are now posted.  UPDATE: I made a small correction to the answer to the last problem: the answer should be 13ns, not 20ns.
8/30: HW2 is now posted; it will be due on Wednesday due to the Labor Day holiday.  Solutions to HW1 will be available tomorrow after class.
8/30: Here are the notes on [intervals.pdf time intervals] which we will talk about in Wednesday's class; the material isn't in your textbook.
8/29: The next homework set will be posted on Tuesday, along with the solutions to HW1.
8/27: Regarding problem 1...it's a bear, isn't it?  Don't get too stuck on it that you don't do the other problems.  Here are a couple hints: <ul><li>When clock C is directly overhead of clock Y, that is an EVENT.  (The perpendicular distance between the clocks is irrelevant.) <li>At an event, the clock readings will be the same for everyone.  C and Y may show different times, but everyone will agree what times those clocks show at the event. <li>The reading on any clock is the time in the clock's frame.</ul>
8/24: There will be no quiz this first week.
8/24: The first homework assignment is now available in the Assignments tab.
8/20: Welcome to Modern Physics!  Please click on the Syllabus button above to learn more about the course.