@@ -1,7 +1,7 @@
 8/22	Special Relativity	2	HW1	
 8/29	Special Relativity	2	HW2	Quiz1
+9/5	General Relativity	2	HW3	Quiz2
 
-9/5				
 9/12				
 9/19				
 9/26				
