@@ -74,6 +74,9 @@ activate:function(){Cookies.set("tab",$("#tabs").tabs("option","active"),{expire
 <h2>News</h2><ul>
 
 <li>
+<DIV class="updated">Posted 9/5:</DIV>
+ <A HREF="Repository/HW3.pdf">Homework 3</A> has now been posted.
+<li>
 <DIV class="updated">Posted 9/1:</DIV>
  HW1 solutions are now posted.  UPDATE: I made a small correction to the answer to the last problem: the answer should be 13ns, not 20ns.
 <li>
@@ -110,7 +113,24 @@ activate:function(){Cookies.set("tab",$("#tabs").tabs("option","active"),{expire
 <TR><TH>#<TH>Starting
 <TH>Monday
 <TH>Wednesday
-<TH>Friday<!--2,2--><TR class="current"><TD class="weeknumber">2
+<TH>Friday<!--3,3--><TR class="current"><TD class="weeknumber">3
+<TD class="date">9/5
+<TD class="topic">General Relativity	<TD class="chapter">2
+
+<TD class="homework"><A HREF="Repository/HW3.pdf">HW3</A>
+	<BR>&nbsp;
+	<TD class="quiz">&nbsp;
+	<BR>&nbsp;
+	<TD>
+	&nbsp;<BR>
+	&nbsp;
+<TD>
+	&nbsp;<BR>
+	&nbsp;
+<TD>
+	&nbsp;<BR>
+	&nbsp;
+<TR><TD class="weeknumber">2
 <TD class="date">8/29
 <TD class="topic">Special Relativity	<TD class="chapter">2
 
