@@ -1,3 +1,4 @@
+9/5: [HW3.pdf Homework 3] has now been posted.
 9/1: HW1 solutions are now posted.  UPDATE: I made a small correction to the answer to the last problem: the answer should be 13ns, not 20ns.
 8/30: HW2 is now posted; it will be due on Wednesday due to the Labor Day holiday.  Solutions to HW1 will be available tomorrow after class.
 8/30: Here are the notes on [intervals.pdf time intervals] which we will talk about in Wednesday's class; the material isn't in your textbook.
